--- a/css.css
+++ b/css.css
@@ -1,5 +1,7 @@
 .home {
-  height: 100vh;
+  height: 100%;
+  width: 100%;
+  margin: 0;
   display: flex;
   text-align: center;
   align-items: center;
