--- a/css.css
+++ b/css.css
@@ -1,7 +1,6 @@
 .home {
-  height: 100%;
-  width: 100%;
-  margin: 0;
+  width: 100vw; 
+  height: 100vh;
   display: flex;
   text-align: center;
   align-items: center;
