--- a/css.css
+++ b/css.css
@@ -1,17 +1,17 @@
 .home {
-  width: 100vw; 
-  height: 100vh;
+  height: 100%;
+  min-height: 100vh;
   display: flex;
   text-align: center;
   align-items: center;
-  justify-content: center
+  justify-content: center;
 }
 
 .home {
   background-size: 200%;
   background-image: linear-gradient(to bottom left, #196619 0%, #29a329 50%, #adebad 100%);
-  transition: 600ms ease
+  transition: 600ms ease;
                                     }
   &:hover {
-    background-position: 100% 0
+    background-position: 100% 0;
   }
